refactor: modernize architecture and adapt for Supabase integration
- Modernize codebase to Java 21 (records for DTOs, pattern matching).
- Refactor to Spring Boot best practices:
    - Replace field injection with constructor injection via Lombok.
    - Extract configuration to @ConfigurationProperties.
    - Centralize business logic in Service layer.
- Adapt for Supabase integration:
    - Migrate User IDs from Long to UUID.
    - Map User entity to 'profiles' table.
    - Decouple internal auth in favor of Supabase Auth (GoTrue).
    - Update JWT validation to handle Supabase tokens.
- Enhance error handling with custom exceptions and global REST advice.
- Optimize JPA queries with FETCH joins and read-only transactions.
- Update application.properties to use external environment variables.